--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "Seno Wijayanto",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "http": "0.0.0",
+    "mongoose": "^5.7.7",
+    "socket.io": "^2.3.0"
   }
 }
